--- a/public_html/assets/css/materialization.less
+++ b/public_html/assets/css/materialization.less
@@ -3,9 +3,7 @@
 	--mouse-y: 50px;
 }
 
-/* VARIABLES */
-@color-danger : #cc0000;
-@color-warning : #FF6600;
+@import "materialization-variables.less";
 
 body {
 	margin: 0;
@@ -15,23 +13,6 @@ body {
 .container {
 	padding: 20px;
 }
-
-/* DEBUG START */
-.vertical-target-line {
-	height: 100%;
-	width: 1px;
-	background-color: #88888880;
-	position: absolute;
-	left: var(--mouse-x);
-}
-.horizontal-target-line {
-	width: 100%;
-	height: 1px;
-	background-color: #88888880;
-	position: absolute;
-	top: var(--mouse-y);
-}
-/* DEBUG STOP */
 
 button, a {
 	cursor: pointer;
@@ -147,3 +128,21 @@ button, a {
 	color: #424242;
 	padding-left: 10px;
 }
+
+
+/* DEBUG START */
+.vertical-target-line {
+	height: 100%;
+	width: 1px;
+	background-color: #88888880;
+	position: absolute;
+	left: var(--mouse-x);
+}
+.horizontal-target-line {
+	width: 100%;
+	height: 1px;
+	background-color: #88888880;
+	position: absolute;
+	top: var(--mouse-y);
+}
+/* DEBUG STOP */
